; ModuleID = '/home/carl/AnghaBench/systemd/src/coredump/extr_stacktrace.c_coredump_make_stack_trace.c'
source_filename = "/home/carl/AnghaBench/systemd/src/coredump/extr_stacktrace.c_coredump_make_stack_trace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"Failed to generate stack trace: %s\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c"Failed to generate stack trace: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @coredump_make_stack_trace(i32 %0, i8* %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i8** %2, i8*** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = load i8**, i8*** %6, align 8
  %11 = call i32 @make_stack_trace(i32 %8, i8* %9, i8** %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  %15 = icmp eq i32 %12, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %3
  %17 = call i32 (...) @dwfl_errno()
  %18 = call i32 @dwfl_errmsg(i32 %17)
  %19 = call i32 @log_warning(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %27

20:                                               ; preds = %3
  %21 = load i32, i32* %7, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %26

23:                                               ; preds = %20
  %24 = load i32, i32* %7, align 4
  %25 = call i32 @log_warning_errno(i32 %24, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  br label %26

26:                                               ; preds = %23, %20
  br label %27

27:                                               ; preds = %26, %16
  ret void
}

declare dso_local i32 @make_stack_trace(i32, i8*, i8**) #1

declare dso_local i32 @log_warning(i8*, i32) #1

declare dso_local i32 @dwfl_errmsg(i32) #1

declare dso_local i32 @dwfl_errno(...) #1

declare dso_local i32 @log_warning_errno(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
